--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -16,7 +16,8 @@
         </div>
         <div class="row">
             <div class="col-md-3"></div>
-            <div class="col-md-9 border-top border-bottom">
+            <div class="col-md-9">
+                <hr>
                 <div class="card p-2 my-3 border-warning border-3" style="width: 100%;">
                     <div class="row g-0">
                         <div class="col-md-4">
@@ -26,6 +27,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <h2 class="card-text fw-bold">{{format_currency 10000000}}</h2>
+                                <p class="card-text"><mark>Bidder tra gia cao nhat: ****Khoa</mark></p>
                                 <p class="card-text">
                                     <small class="text-muted">Gia mua ngay neu co</small>
                                 </p>
@@ -53,6 +55,7 @@
                                 <h2 class="card-text fw-bold">
                                     {{format_currency 10000000}}
                                 </h2>
+                                <p class="card-text"><mark>Bidder tra gia cao nhat: ****Khoa</mark></p>
                                 <p class="card-text">
                                     <small class="text-muted">Gia mua ngay neu co</small>
                                 </p>
@@ -69,8 +72,9 @@
                         </div>
                     </div>
                 </div>
+                <hr>
                 <nav aria-label="Page navigation">
-                    <ul class="pagination justify-content-center border-top pt-3">
+                    <ul class="pagination justify-content-center">
                         <li class="page-item disabled">
                             <a class="page-link" href="#" aria-label="Previous">
                                 <span aria-hidden="true">&laquo;</span>
@@ -90,7 +94,7 @@
                         </li>
                     </ul>
                 </nav>
-
+                <hr>
             </div>
         </div>
     </div>
