Update product detail skeleton. Change page's favicon.

--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -20,10 +20,12 @@
                 <hr>
                 <div class="card p-2 my-3 border-warning border-3" style="width: 100%;">
                     <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="Image Source" class="img-fluid rounded-start" alt="Card title" />
+                        <div class="col-sm-4">
+                             <div class="container" style="height: 250px;">
+                                <img src="/images/item.jpg" class="object-fit-cover h-100 w-100 rounded" alt="Card title" />
+                            </div>
                         </div>
-                        <div class="col-md-8">
+                        <div class="col-sm-8">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <h2 class="card-text fw-bold">{{format_currency 10000000}}</h2>
@@ -46,10 +48,12 @@
                 </div>
                 <div class="card p-2 my-3" style="width: 100%;">
                     <div class="row g-0">
-                        <div class="col-md-4">
-                            <img src="Image Source" class="img-fluid rounded-start" alt="Card title" />
+                        <div class="col-sm-4">
+                            <div class="container" style="height: 250px;">
+                                <img src="/images/shoe.jpg" class="object-fit-cover h-100 w-100 rounded" alt="Card title" />
+                            </div>
                         </div>
-                        <div class="col-md-8">
+                        <div class="col-sm-8">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <h2 class="card-text fw-bold">
