--- a/views/product_detail.handlebars
+++ b/views/product_detail.handlebars
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="col-md-7 mb-3 m-md-0">
             <div class="bg-body-secondary rounded mb-3" style="height: 500px;">
-                <img src="/images/item.jpg" alt="" class="object-fit-contain h-100 w-100 p-5">
+                <img src="/images/iphone.jpg" alt="" class="object-fit-contain h-100 w-100 p-5">
             </div>
 
             <div id="carouselId" class="carousel carousel-dark slide">
@@ -71,7 +71,7 @@
                     <div class="vr" style="height: 100%;"></div>
                 </div>
                 <div class="col-5">
-                    <h6 class="fw-bold text-nowrap">Bidder dẫn đầu: ****Khoa<small class="text-muted">(3)</small></h6>
+                    <h6 class="fw-bold">Bidder dẫn đầu: ****Khoa<small class="text-muted">(3)</small></h6>
                     <p class="text-decoration-underline ps-2">100% danh gia tich cuc</p>
                 </div>
             </div>
@@ -86,7 +86,7 @@
     </div>
 
     <div class="container-fluid border mt-5">
-        <h1 class="fw-bold">Mo ta</h1>
+        <h3 class="fw-bold">Mo ta</h3>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, nobis? Sunt ut quae quibusdam. Repudiandae error
         placeat quasi incidunt aspernatur aut perferendis possimus, sunt ratione rem autem iure? Aperiam, ipsum.
         Asperiores, perspiciatis debitis cumque repellat magni eligendi velit, illo corporis expedita est, odit
@@ -100,5 +100,235 @@
         Cupiditate deserunt ex soluta nam quaerat laudantium quidem impedit velit quod dolorum at ut maxime doloremque
         officia libero, cum deleniti pariatur. Quibusdam blanditiis eveniet porro incidunt illo consequatur commodi
         dolores.
+    </div>
+</div>
+
+<div class="container-fluid">
+    <h1 class="fw-bold">Binh luan</h1>
+    <div class="container-fluid mb-5">
+        <div class="card">
+            <div class="card-body p-4">
+                <div class="d-flex flex-start mb-4">
+                    <img class="rounded-circle shadow-1-strong me-3" src="/icons/person-circle.svg" alt="avatar"
+                        width="32" height="32" />
+                    <div class="flex-grow-1 flex-shrink-1">
+                        <div>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <p class="mb-1">
+                                    Maria Smantha <span class="small">- 2 hours ago</span>
+                                </p>
+                                <a class="link-underline link-underline-opacity-0" href="#!"><i
+                                        class="bi bi-reply"></i><span class="small">
+                                        reply</span></a>
+                            </div>
+                            <p class="small mb-0">
+                                It is a long established fact that a reader will be distracted by
+                                the readable content of a page.
+                            </p>
+                        </div>
+
+                        <div class="d-flex flex-start mt-4">
+                            <a class="me-3" href="#">
+                                <img class="rounded-circle shadow-1-strong me-3" src="/icons/person-circle.svg"
+                                    alt="avatar" width="32" height="32" />
+                            </a>
+                            <div class="flex-grow-1 flex-shrink-1">
+                                <div>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <p class="mb-1">
+                                            Simona Disa <span class="small">- 3 hours ago</span>
+                                        </p>
+                                    </div>
+                                    <p class="small mb-0">
+                                        letters, as opposed to using 'Content here, content here',
+                                        making it look like readable English.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="d-flex flex-start mt-4">
+                            <a class="me-3" href="#">
+                                <img class="rounded-circle shadow-1-strong me-3" src="/icons/person-circle.svg"
+                                    alt="avatar" width="32" height="32" />
+                            </a>
+                            <div class="flex-grow-1 flex-shrink-1">
+                                <div>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <p class="mb-1">
+                                            John Smith <span class="small">- 4 hours ago</span>
+                                        </p>
+                                    </div>
+                                    <p class="small mb-0">
+                                        the majority have suffered alteration in some form, by
+                                        injected humour, or randomised words.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="d-flex flex-start mb-4">
+                    <img class="rounded-circle shadow-1-strong me-3" src="/icons/person-circle.svg" alt="avatar"
+                        width="32" height="32" />
+                    <div class="flex-grow-1 flex-shrink-1">
+                        <div>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <p class="mb-1">
+                                    Natalie Smith <span class="small">- 2 hours ago</span>
+                                </p>
+                                <a class="link-underline link-underline-opacity-0" href="#!"><i
+                                        class="bi bi-reply"></i><span class="small">
+                                        reply</span></a>
+                            </div>
+                            <p class="small mb-0">
+                                The standard chunk of Lorem Ipsum used since the 1500s is
+                                reproduced below for those interested. Sections 1.10.32 and
+                                1.10.33.
+                            </p>
+                        </div>
+
+                        <div class="d-flex flex-start mt-4">
+                            <a class="me-3" href="#">
+                                <img class="rounded-circle shadow-1-strong me-3" src="/icons/person-circle.svg"
+                                    alt="avatar" width="32" height="32" />
+                            </a>
+                            <div class="flex-grow-1 flex-shrink-1">
+                                <div>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <p class="mb-1">
+                                            Lisa Cudrow <span class="small">- 4 hours ago</span>
+                                        </p>
+                                    </div>
+                                    <p class="small mb-0">
+                                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus
+                                        scelerisque ante sollicitudin commodo. Cras purus odio,
+                                        vestibulum in vulputate at, tempus viverra turpis.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="d-flex flex-start mt-4">
+                            <a class="me-3" href="#">
+                                <img class="rounded-circle shadow-1-strong me-3" src="/icons/person-circle.svg"
+                                    alt="avatar" width="32" height="32" />
+                            </a>
+                            <div class="flex-grow-1 flex-shrink-1">
+                                <div>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <p class="mb-1">
+                                            Maggie McLoan <span class="small">- 5 hours ago</span>
+                                        </p>
+                                    </div>
+                                    <p class="small mb-0">
+                                        a Latin professor at Hampden-Sydney College in Virginia,
+                                        looked up one of the more obscure Latin words, consectetur
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="d-flex flex-start mt-4">
+                            <a class="me-3" href="#">
+                                <img class="rounded-circle shadow-1-strong me-3" src="/icons/person-circle.svg"
+                                    alt="avatar" width="32" height="32" />
+                            </a>
+                            <div class="flex-grow-1 flex-shrink-1">
+                                <div>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <p class="mb-1">
+                                            John Smith <span class="small">- 6 hours ago</span>
+                                        </p>
+                                    </div>
+                                    <p class="small mb-0">
+                                        Autem, totam debitis suscipit saepe sapiente magnam officiis
+                                        quaerat necessitatibus odio assumenda, perferendis quae iusto
+                                        labore laboriosam minima numquam impedit quam dolorem!
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+    <h1 class="fw-bold">Cac san pham khac</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3 col-6">
+                <div class="card p-2 h-100 border-0">
+                    <img src="/images/item.jpg" class="img-fluid rounded-3" alt="..." />
+                    <div class="card-body">
+                        <h5 class="card-title">Ten san pham</h5>
+                        <p class="card-text fw-bold">{{format_currency 10000000}}</p>
+                        <p class="card-text">Thong tin bidder</p>
+                        <p class="card-text">Gia mua ngay</p>
+                        <p class="card-text">Ngay dang</p>
+                        <p class="card-text">Thoi gian con lai</p>
+                        <p class="card-text">So luot ra gia</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-6">
+                <div class="card p-2 h-100 border-0">
+                    <img src="/images/item.jpg" class="img-fluid rounded-3" alt="..." />
+                    <div class="card-body">
+                        <h5 class="card-title">Ten san pham</h5>
+                        <p class="card-text fw-bold">{{format_currency 10000000}}</p>
+                        <p class="card-text">Thong tin bidder</p>
+                        <p class="card-text">Gia mua ngay</p>
+                        <p class="card-text">Ngay dang</p>
+                        <p class="card-text">Thoi gian con lai</p>
+                        <p class="card-text">So luot ra gia</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-6">
+                <div class="card p-2 h-100 border-0">
+                    <img src="/images/item.jpg" class="img-fluid rounded-3" alt="..." />
+                    <div class="card-body">
+                        <h5 class="card-title">Ten san pham</h5>
+                        <p class="card-text fw-bold">{{format_currency 10000000}}</p>
+                        <p class="card-text">Thong tin bidder</p>
+                        <p class="card-text">Gia mua ngay</p>
+                        <p class="card-text">Ngay dang</p>
+                        <p class="card-text">Thoi gian con lai</p>
+                        <p class="card-text">So luot ra gia</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-6">
+                <div class="card p-2 h-100 border-0">
+                    <img src="/images/item.jpg" class="img-fluid rounded-3" alt="..." />
+                    <div class="card-body">
+                        <h5 class="card-title">Ten san pham</h5>
+                        <p class="card-text fw-bold">{{format_currency 10000000}}</p>
+                        <p class="card-text">Thong tin bidder</p>
+                        <p class="card-text">Gia mua ngay</p>
+                        <p class="card-text">Ngay dang</p>
+                        <p class="card-text">Thoi gian con lai</p>
+                        <p class="card-text">So luot ra gia</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-6 me-md-5">
+                <div class="card p-2 h-100 border-0 text-nowrap">
+                    <img src="/images/item.jpg" class="img-fluid rounded-3" alt="..." />
+                    <div class="card-body">
+                        <h5 class="card-title">Ten san pham</h5>
+                        <p class="card-text fw-bold">{{format_currency 10000000}}</p>
+                        <p class="card-text">Thong tin bidder</p>
+                        <p class="card-text">Gia mua ngay</p>
+                        <p class="card-text">Ngay dang</p>
+                        <p class="card-text">Thoi gian con lai</p>
+                        <p class="card-text">So luot ra gia</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
