--- a/views/vwProducts/product.handlebars
+++ b/views/vwProducts/product.handlebars
@@ -1,15 +1,15 @@
 <main class="container-fluid my-3">
-    <h1 class="fw-bold">Danh muc</h1>
+    <h1 class="fw-bold">{{cat_name}}</h1>
     <div class="container-fluid mb-5">
         <div class="d-flex justify-content-end mb-3">
             <div class="dropdown">
-                <button class="btn btn-outline-secondary dropdown-toggle rounded-pill" type="button"
+                <button class="btn btn-outline-primary dropdown-toggle rounded-pill" type="button"
                     data-bs-toggle="dropdown" aria-expanded="false">
-                    Sap xep
+                    Sắp xếp
                 </button>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Thoi gian</a></li>
-                    <li><a class="dropdown-item" href="#">Gia</a></li>
+                    <li><a class="dropdown-item" href="#">Thời gian</a></li>
+                    <li><a class="dropdown-item" href="#">Giá</a></li>
                 </ul>
             </div>
 
@@ -21,8 +21,9 @@
                 <div class="card p-2 my-3 border-warning border-3" style="width: 100%;">
                     <div class="row g-0">
                         <div class="col-sm-4">
-                             <div class="container" style="height: 250px;">
-                                <img src="/images/item.jpg" class="object-fit-cover h-100 w-100 rounded" alt="Card title" />
+                            <div class="container" style="height: 250px;">
+                                <img src="/images/item.jpg" class="object-fit-cover h-100 w-100 rounded"
+                                    alt="Card title" />
                             </div>
                         </div>
                         <div class="col-sm-8">
@@ -46,36 +47,40 @@
                         </div>
                     </div>
                 </div>
+                {{#each products}}
                 <div class="card p-2 my-3" style="width: 100%;">
                     <div class="row g-0">
                         <div class="col-sm-4">
                             <div class="container" style="height: 250px;">
-                                <img src="/images/shoe.jpg" class="object-fit-cover h-100 w-100 rounded" alt="Card title" />
+                                <img src="/images/shoe.jpg" class="object-fit-cover h-100 w-100 rounded"
+                                    alt="Card title" />
                             </div>
                         </div>
                         <div class="col-sm-8">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title">{{product_name}}</h5>
                                 <h2 class="card-text fw-bold">
-                                    {{format_currency 10000000}}
+                                    {{format_currency current_price}}
                                 </h2>
-                                <p class="card-text"><mark>Bidder tra gia cao nhat: ****Khoa</mark></p>
+                                <p class="card-text"><mark>Bidder tra gia cao nhat: {{highest_bidder}}</mark></p>
                                 <p class="card-text">
-                                    <small class="text-muted">Gia mua ngay neu co</small>
+                                    <small class="text-muted">{{format_currency buy_now_price}}</small>
                                 </p>
                                 <div class="d-md-flex justify-content-between">
                                     <p class="card-text">
-                                        Ngay dang san pham
+                                        {{format_datetime created_at}}
                                     </p>
                                     <p class="card-text">
-                                        <small class="text-muted">22 luot dau gia</small>
+                                        <small class="text-muted">{{bid_count}}</small>
                                     </p>
                                 </div>
-                                <p class="card-text text-danger fw-bold">Thoi gian con lai</p>
+                                <p class="card-text text-danger fw-bold">{{format_datetime end_time}}</p>
+                                <a href="/product/details/{{product_id}}" class="stretched-link"></a>
                             </div>
                         </div>
                     </div>
                 </div>
+                {{/each}}
                 <hr>
                 <nav aria-label="Page navigation">
                     <ul class="pagination justify-content-center">
