--- a/views/vwProducts/product_detail.handlebars
+++ b/views/vwProducts/product_detail.handlebars
@@ -60,51 +60,41 @@
 
         </div>
         <div class="col-md-5">
-            <h5 class="fw-bold">TEN SAN PHAM</h5>
+            <h5 class="fw-bold">{{product.product_name}}</h5>
             <hr>
             <div class="row">
                 <div class="col-5">
-                    <h6 class="fw-bold">Seller: jim-123<small class="text-muted">(17)</small></h6>
-                    <p class="text-decoration-underline ps-2">100% danh gia tich cuc</p>
+                    <h6 class="fw-bold">Seller: {{seller.full_name}} <small class="text-muted">({{seller.total_rating}})</small></h6>
+                    <p class="text-decoration-underline ps-2">{{positive_percentage seller.rating_plus seller.total_rating}}% đánh giá tích cực</p>
                 </div>
                 <div class="col-1">
                     <div class="vr" style="height: 100%;"></div>
                 </div>
+                {{#if top_bidder}}
                 <div class="col-5">
-                    <h6 class="fw-bold">Bidder dẫn đầu: ****Khoa<small class="text-muted">(3)</small></h6>
-                    <p class="text-decoration-underline ps-2">100% danh gia tich cuc</p>
+                    <h6 class="fw-bold">Bidder dẫn đầu: {{mask_name top_bidder.full_name}}<small class="text-muted">({{top_bidder.total_rating}})</small></h6>
+                    <p class="text-decoration-underline ps-2">{{positive_percentage top_bidder.rating_plus top_bidder.total_rating}}% đánh giá tích cực</p>
                 </div>
+                {{/if}}
             </div>
             <hr>
 
-            <h4>Gia hien tai: <span class="fw-bold">{{format_currency 10000000}}</span></h4>
-            <p>Ngay mo ban: </p>
-            <p class="text-danger">Thoi diem ket thuc: </p>
-            <h4>Gia mua ngay: <span class="fw-bold">{{format_currency 10000000}}</span></h4>
+            <h4>Giá bán: <span class="fw-bold">{{format_currency product.current_price}}</span></h4>
+            <p>Ngày mở bán: {{format_datetime product.created_at}}</p>
+            <p class="text-danger">Ngày kết thúc: {{format_datetime product.end_time}}</p>
+            <h4>Mua ngay với: <span class="fw-bold">{{format_currency product.buy_now_price}}</span></h4>
             <hr>
         </div>
     </div>
 
     <div class="container-fluid border mt-5">
-        <h3 class="fw-bold">Mo ta</h3>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, nobis? Sunt ut quae quibusdam. Repudiandae error
-        placeat quasi incidunt aspernatur aut perferendis possimus, sunt ratione rem autem iure? Aperiam, ipsum.
-        Asperiores, perspiciatis debitis cumque repellat magni eligendi velit, illo corporis expedita est, odit
-        consequatur soluta quisquam ad eius suscipit cupiditate eos. Suscipit impedit voluptatem pariatur repellat
-        officia saepe, iure nihil!
-        Minus dignissimos, fuga eum error quod numquam tempore voluptate hic explicabo animi autem dolorem ratione illum
-        expedita sed a omnis deserunt, libero nemo modi odit distinctio maiores dolor dolores? Fugit?
-        Explicabo qui architecto libero magni! Voluptatibus quod asperiores adipisci laboriosam excepturi rerum autem
-        nihil aliquam nesciunt, ipsam, deleniti eaque sint ad corrupti repellat. Commodi corporis tenetur quo fugit
-        assumenda magnam.
-        Cupiditate deserunt ex soluta nam quaerat laudantium quidem impedit velit quod dolorum at ut maxime doloremque
-        officia libero, cum deleniti pariatur. Quibusdam blanditiis eveniet porro incidunt illo consequatur commodi
-        dolores.
+        <h3 class="fw-bold">Mô tả sản phẩm</h3>
+        <p>{{product.description}}</p>
     </div>
 </div>
 
 <div class="container-fluid">
-    <h1 class="fw-bold">Binh luan</h1>
+    <h1 class="fw-bold">Hỏi đáp</h1>
     <div class="container-fluid mb-5">
         <div class="card">
             <div class="card-body p-4">
@@ -256,7 +246,7 @@
     </div>
 
 
-    <h1 class="fw-bold">Cac san pham khac</h1>
+    <h1 class="fw-bold">Các sản phẩm khác</h1>
     <div class="container">
         <div class="row">
             <div class="col-md-3 col-6">
