--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -54,11 +54,19 @@
                             </ul>
                         </li>
                     </ul>
+                    {{#if isAuthenticated}}
+                    <ul class="navbar-nav me-2">
+                        <li class="nav-item">
+                            <a class="nav-link text-nowrap" href="/logout">Log out</a>
+                        </li>
+                    </ul>   
+                    {{else}}
                     <ul class="navbar-nav me-2">
                         <li class="nav-item">
                             <a class="nav-link text-nowrap" href="/login">Đăng nhập</a>
                         </li>
                     </ul>
+                    {{/if}}
                 </div>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Tìm sản phẩm" aria-label="Search" />
@@ -95,6 +103,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
+
+    {{{_sections.script}}}
 </body>
 
 </html>
