--- a/views/vwProducts/product.handlebars
+++ b/views/vwProducts/product.handlebars
@@ -62,19 +62,19 @@
                                 <h2 class="card-text fw-bold">
                                     {{format_currency current_price}}
                                 </h2>
-                                <p class="card-text"><mark>Bidder tra gia cao nhat: {{highest_bidder}}</mark></p>
+                                <p class="card-text"><mark>Bidder tra gia cao nhat: {{mask_name highest_bidder.full_name}}</mark></p>
                                 <p class="card-text">
-                                    <small class="text-muted">{{format_currency buy_now_price}}</small>
+                                    <small class="text-muted">Giá mua ngay: {{format_currency buy_now_price}}</small>
                                 </p>
                                 <div class="d-md-flex justify-content-between">
                                     <p class="card-text">
-                                        {{format_datetime created_at}}
+                                        Ngày mở bán: {{format_datetime created_at}}
                                     </p>
                                     <p class="card-text">
                                         <small class="text-muted">{{bid_count}}</small>
                                     </p>
                                 </div>
-                                <p class="card-text text-danger fw-bold">{{format_datetime end_time}}</p>
+                                <p class="card-text text-danger fw-bold">Kết thúc phiên: {{format_endDatetime end_time}}</p>
                                 <a href="/product/details/{{product_id}}" class="stretched-link"></a>
                             </div>
                         </div>
