--- a/views/vwProducts/product_detail.handlebars
+++ b/views/vwProducts/product_detail.handlebars
@@ -81,7 +81,7 @@
 
             <h4>Giá bán: <span class="fw-bold">{{format_currency product.current_price}}</span></h4>
             <p>Ngày mở bán: {{format_datetime product.created_at}}</p>
-            <p class="text-danger">Ngày kết thúc: {{format_datetime product.end_time}}</p>
+            <p class="text-danger">Ngày kết thúc: {{format_endDatetime product.end_time}}</p>
             <h4>Mua ngay với: <span class="fw-bold">{{format_currency product.buy_now_price}}</span></h4>
             <hr>
         </div>
@@ -249,76 +249,22 @@
     <h1 class="fw-bold">Các sản phẩm khác</h1>
     <div class="container">
         <div class="row">
+            {{#each related}}
             <div class="col-md-3 col-6">
                 <div class="card p-2 h-100 border-0">
                     <img src="/images/item.jpg" class="img-fluid rounded-3" alt="..." />
                     <div class="card-body">
-                        <h5 class="card-title">Ten san pham</h5>
-                        <p class="card-text fw-bold">{{format_currency 10000000}}</p>
-                        <p class="card-text">Thong tin bidder</p>
-                        <p class="card-text">Gia mua ngay</p>
-                        <p class="card-text">Ngay dang</p>
-                        <p class="card-text">Thoi gian con lai</p>
-                        <p class="card-text">So luot ra gia</p>
+                        <h5 class="card-title">{{product_name}}</h5>
+                        <p class="card-text fw-bold">{{format_currency current_price}}</p>
+                        <p class="card-text">Bidder dẫn đầu: {{mask_name highest_bidder.full_name}}</p>
+                        <p class="card-text">Giá mua ngay: {{format_currency buy_now_price}}</p>
+                        <p class="card-text">Bắt đầu: {{format_datetime created_at}}</p>
+                        <p class="card-text">Kết thúc: {{format_endDatetime end_time}}</p>
+                        <p class="card-text">Lượt ra giá: {{bid_count}}</p>
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 col-6">
-                <div class="card p-2 h-100 border-0">
-                    <img src="/images/item.jpg" class="img-fluid rounded-3" alt="..." />
-                    <div class="card-body">
-                        <h5 class="card-title">Ten san pham</h5>
-                        <p class="card-text fw-bold">{{format_currency 10000000}}</p>
-                        <p class="card-text">Thong tin bidder</p>
-                        <p class="card-text">Gia mua ngay</p>
-                        <p class="card-text">Ngay dang</p>
-                        <p class="card-text">Thoi gian con lai</p>
-                        <p class="card-text">So luot ra gia</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 col-6">
-                <div class="card p-2 h-100 border-0">
-                    <img src="/images/item.jpg" class="img-fluid rounded-3" alt="..." />
-                    <div class="card-body">
-                        <h5 class="card-title">Ten san pham</h5>
-                        <p class="card-text fw-bold">{{format_currency 10000000}}</p>
-                        <p class="card-text">Thong tin bidder</p>
-                        <p class="card-text">Gia mua ngay</p>
-                        <p class="card-text">Ngay dang</p>
-                        <p class="card-text">Thoi gian con lai</p>
-                        <p class="card-text">So luot ra gia</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 col-6">
-                <div class="card p-2 h-100 border-0">
-                    <img src="/images/item.jpg" class="img-fluid rounded-3" alt="..." />
-                    <div class="card-body">
-                        <h5 class="card-title">Ten san pham</h5>
-                        <p class="card-text fw-bold">{{format_currency 10000000}}</p>
-                        <p class="card-text">Thong tin bidder</p>
-                        <p class="card-text">Gia mua ngay</p>
-                        <p class="card-text">Ngay dang</p>
-                        <p class="card-text">Thoi gian con lai</p>
-                        <p class="card-text">So luot ra gia</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 col-6 me-md-5">
-                <div class="card p-2 h-100 border-0 text-nowrap">
-                    <img src="/images/item.jpg" class="img-fluid rounded-3" alt="..." />
-                    <div class="card-body">
-                        <h5 class="card-title">Ten san pham</h5>
-                        <p class="card-text fw-bold">{{format_currency 10000000}}</p>
-                        <p class="card-text">Thong tin bidder</p>
-                        <p class="card-text">Gia mua ngay</p>
-                        <p class="card-text">Ngay dang</p>
-                        <p class="card-text">Thoi gian con lai</p>
-                        <p class="card-text">So luot ra gia</p>
-                    </div>
-                </div>
-            </div>
+            {{/each}}
         </div>
     </div>
 </div>
