Add filter search result, fts and pagination.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -68,8 +68,8 @@
                     </ul>
                     {{/if}}
                 </div>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Tìm sản phẩm" aria-label="Search" />
+                <form class="d-flex" role="search" action="/product/results">
+                    <input class="form-control me-2" type="search" placeholder="Tìm sản phẩm" aria-label="Search" name="item" />
                     <button class="btn btn-primary text-nowrap" type="submit">Tìm Kiếm</button>
                 </form>
             </div>
