--- a/views/vwProducts/product_detail.handlebars
+++ b/views/vwProducts/product_detail.handlebars
@@ -8,6 +8,15 @@
     </div>
 </div>
 
+{{#if fromAdmin}}
+<div class="container-md mt-3">
+    <a href="/admin?proPage={{adminProPage}}" 
+       class="btn btn-secondary">
+        <i class="bi bi-arrow-left"></i> Quay về Admin
+    </a>
+</div>
+{{/if}}
+
 <div class="container-md my-5">
     <div class="row">
         <div class="col-md-7 mb-3 m-md-0">
